<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_back"
    android:backgroundTint="@color/blue_dark"
    android:backgroundTintMode="multiply">


    <EditText
        android:id="@+id/login_username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="416dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="#830039CB"
        android:ems="10"
        android:fontFamily="@font/librefranklin_regular"
        android:hint="@string/user_field"
        android:inputType="textEmailAddress"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="20sp"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textColorHint="@color/md_theme_dark_secondary"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/login_pass_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="72dp"
        android:background="@drawable/roundcorner"
        android:backgroundTint="#830039CB"
        android:ems="10"
        android:fontFamily="@font/librefranklin_regular"
        android:hint="@string/passw_field"
        android:inputType="textPassword"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:padding="20sp"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textColorHint="@color/md_theme_dark_secondary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_field" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/md_theme_dark_secondary"
        android:fontFamily="@font/librefranklin_medium"
        android:hint="@string/iniciar_sesi_n"
        android:text="@string/login_button"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_field" />

    <Button
        android:id="@+id/sign_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/md_theme_dark_tertiary"
        android:fontFamily="@font/librefranklin_medium"
        android:hint="@string/registrarse"
        android:text="@string/signUp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_field" />

    <TextView
        android:id="@+id/recoverpasstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="134dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/merriweather_italic"
        android:text="@string/forgot_your_password"
        android:textColor="@color/azul_base"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_field" />

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/merriweather_bold_italic"
        android:text="Welcome Back!"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_onPrimary"
        android:textSize="79sp"
        app:layout_constraintBottom_toTopOf="@+id/login_username_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>